--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,6 +4,16 @@ orbs:
 jobs:
   build:
     executor: python/default
+    docker:
+      - image: cimg/postgres:12.0
+        environment:
+          DB_NAME: socialnetworkdb
+          DB_USER: demo
+          DB_PASSWORD: password
+          DB_HOST: localhost
+          DB_PORT: 5432
+
+
     resource_class: medium
     steps:
       - checkout
