--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,8 +3,9 @@ orbs:
   python: circleci/python@1.1.0
 jobs:
   build:
-    executor: python/default
+    #executor: python/default
     docker:
+      - image: cimg/python:3.9
       - image: cimg/postgres:14.0
         environment:
           TEST_DATABASE_URL_1: postgresql://postgres@localhost/socialnetworkdb 
