--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,19 @@
 version: 2.1
 orbs:
   python: circleci/python@1.1.0
-jobs:
-  build:
-    #executor: python/default
-    docker:
+
+executors:
+    my-executor: 
+      docker:
       - image: cimg/python:3.9
       - image: cimg/postgres:14.0
         environment:
           TEST_DATABASE_URL_1: postgresql://postgres@localhost/socialnetworkdb 
           POSTGRES_DB: socialnetworkdb
-          POSTGRES_USER: demo 
-          #POSTGRES_PASSWORD: password
-          #POSTGRES_HOST: localhost
-          #POSTGRES_PORT: 5432
-
-
+          POSTGRES_USER: demo
+jobs:
+  install_dependencies:
+    executor: my-executor
     resource_class: medium
     steps:
       - checkout
@@ -29,7 +27,12 @@ jobs:
           name: "Run migration"
           command: |
             python manage.py migrate
-
+  
+  build:
+    executor: my-executor
+    resource_class: medium
+    steps:
+      - checkout
       - run:
           name: "Run Test"
           command: |
@@ -38,4 +41,7 @@ jobs:
 workflows:
   main:
     jobs:
-      - build
+      - install_dependencies
+      - build:
+          requires:
+            - install_dependencies
