--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,49 +2,11 @@ version: 2.1
 orbs:
   python: circleci/python@1.1.0
 
-executors:
-    my-executor: 
-      docker:
-      - image: cimg/python:3.9
-      - image: cimg/postgres:14.0
-        environment:
-          TEST_DATABASE_URL_1: postgresql://postgres@localhost/socialnetworkdb 
-          POSTGRES_DB: socialnetworkdb
-          POSTGRES_USER: demo
-jobs:
-  install_dependencies:
-    executor: my-executor
-    steps:
-      - checkout
-      - run: 
-          name: "install dependencies"
-          command: |
-            pip  install -r requirements/base.txt
-            pip  install -r requirements/local.txt
-     
-      - run:
-          name: "Run migration"
-          command: |
-            python manage.py migrate
-       
-      - persist_to_workspace:
-         root: ~/
-         paths:
-            - .pyenv
-  
-  wait_for_test_completion:
-        executor: my-executor
-        steps:
-          - checkout
-          - run:
-             name: Wait for Completion
-             command: |
-                echo "lambda test completed"    
+jobs:    
   build:
-    executor: my-executor
+    machine: true
+    resource_class: viplaw-singh/ubuntu-machine
     steps:
-      - attach_workspace:
-         at: ~/
       - checkout
       - run:
           name: "Run Test"
@@ -54,10 +16,5 @@ jobs:
 workflows:
   main:
     jobs:
-      - install_dependencies
-      - wait_for_test_completion:
-          requires:
-            - install_dependencies
-      - build:
-          requires:
-            - wait_for_test_completion
+      - build
+          
