--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,11 @@ jobs:
     resource_class: viplaw-singh/ubuntu-machine
     steps:
       - checkout
+      - run: 
+          name: "install dependencies"
+          command: |
+            pip  install -r requirements/base.txt
+            pip  install -r requirements/local.txt
       - run:
           name: "Run Test"
           command: |
