--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,7 @@ jobs:
       - run:
           name: "Run Test"
           command: |
+            pyhton manage.py migrate
             pytest
            
 workflows:
