--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,13 +6,8 @@ orbs:
 jobs:
 
   install_dependencies:
-    docker:
-      - image: cimg/python:3.9
-      - image: cimg/postgres:14.0
-        environment:
-          TEST_DATABASE_URL_1: postgresql://postgres@localhost/socialnetworkdb 
-          POSTGRES_DB: socialnetworkdb
-          POSTGRES_USER: demo
+    machine: true
+    resource_class: viplaw-singh/ubuntu-machine
     steps:
       - checkout
       - run: 
@@ -25,20 +20,10 @@ jobs:
           name: "Run migration"
           command: |
             python manage.py migrate
-       
-      - persist_to_workspace:
-         root: ~/
-         paths:
-            - .pyenv
   
   wait_for_test_completion:
-    docker:
-      - image: cimg/python:3.9
-      - image: cimg/postgres:14.0
-        environment:
-          TEST_DATABASE_URL_1: postgresql://postgres@localhost/socialnetworkdb 
-          POSTGRES_DB: socialnetworkdb
-          POSTGRES_USER: demo
+    machine: true
+    resource_class: viplaw-singh/ubuntu-machine
     steps:
       - checkout
       - run:
@@ -46,16 +31,9 @@ jobs:
           command: |
             echo "lambda test completed"    
   build:
-    docker:
-      - image: cimg/python:3.9
-      - image: cimg/postgres:14.0
-        environment:
-          TEST_DATABASE_URL_1: postgresql://postgres@localhost/socialnetworkdb 
-          POSTGRES_DB: socialnetworkdb
-          POSTGRES_USER: demo
+    machine: true
+    resource_class: viplaw-singh/ubuntu-machine
     steps:
-      - attach_workspace:
-         at: ~/
       - checkout
       - run:
           name: "Run Test"
