--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,7 @@ jobs:
       - run: 
           name: "install dependencies"
           command: |
+            sudo apt-get install python3-pip
             pip  install -r requirements/base.txt
             pip  install -r requirements/local.txt
      
