--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,8 @@ jobs:
       - run: 
           name: "install dependencies"
           command: |
+            sudo apt-get update
+            sudo apt-get install python3
             sudo apt-get install python3-pip
             pip  install -r requirements/base.txt
             pip  install -r requirements/local.txt
