--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,8 @@ jobs:
           name: "install dependencies"
           command: |
             sudo apt-get update -y 
-            sudo apt-get install -y python3
-            sudo apt-get install -y python3-pip
+            sudo apt-get install -y python
+            sudo apt-get install -y python-pip
             pip  install -r requirements/base.txt
             pip  install -r requirements/local.txt
      
