--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,8 +22,7 @@ jobs:
       - run:
           name: "Run migration"
           command: |
-            python3 manage.py runserver 127.0.0.1:5432
-            python3 manage.py migrate 127.0.0.1:5432
+            python3 manage.py migrate
   
   wait_for_test_completion:
     machine: true
