--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ jobs:
       - run:
           name: "Run Test"
           command: |
-            pip install pytest-django
+            python3 -m pip install pytest
             pytest
            
 workflows:
