--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,18 @@
 version: 2.1
 orbs:
   python: circleci/python@1.1.0
-
+executors:
+  my-executor:
+    docker:
+      - image: cimg/python:3.9
+      - image: cimg/postgres:14.0
+        environment:
+          TEST_DATABASE_URL_1: postgresql://postgres@localhost/socialnetworkdb 
+          POSTGRES_DB: socialnetworkdb
+          POSTGRES_USER: demo
       
 jobs:
-
+  executors: my-executor
   install_dependencies:
     machine: true
     resource_class: viplaw-singh/ubuntu-runner
