--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ APP_SECRET=your_very_very_secure_secret_key
 DB_NAME=socialnetworkdb
 DB_USER=demo
 DB_PASSWORD=password
-DB_HOST=localhost
+DB_HOST=10.0.12.36
 DB_PORT=5432
