--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,12 +53,21 @@ jobs:
     steps:
       - checkout
       - run:
+          name: Run tests
+          command: |
+            mkdir test-results
+            TEST_FILES=$(circleci tests glob "**/test_*.py")
+            echo "$TEST_FILES" | circleci tests run --command="xargs pytest -o junit_family=legacy --junitxml=test-results/junit.xml" 
+      
+      - run:
           name: "Run Test"
           command: |
             pip  install -r requirements/local.txt
             python3 -m pip install pytest
             pytest --cov
-           
+     
+      - store_test_results:
+         path: test-results     
 workflows:
   main:
     jobs:
