--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ jobs:
           command: |
             mkdir test-results
             TEST_FILES=$(circleci tests glob "**/test_*.py")
-            echo "$TEST_FILES" | circleci tests run --command="xargs pytest -o junit_family=legacy --junitxml=test-results/junit.xml" 
+            echo "$TEST_FILES" | circleci tests run --command="xargs pytest -o junit_family=legacy --junitxml=test-results/junit.xml" --verbose --split-by=filename
       
       - run:
           name: "Run Test"
@@ -67,12 +67,14 @@ jobs:
             pytest --cov
      
       - store_test_results:
-         path: test-results     
+         path: test-results   
+           
 workflows:
   main:
     jobs:
       - build
       - test
+          
       #- wait_for_test_completion
           #requires:
             #- install_dependencies
