--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,16 +18,19 @@ jobs:
             sudo apt-get install -y python3
             sudo apt-get install -y python3-pip
             pip  install -r requirements/base.txt
+      
+      - run:
+          name: "Run migration"
+          command: |
+            python3 manage.py migrate
+            
+
       - run:
           name: Run tests
           command: |
             mkdir test-results
             TEST_FILES=$(circleci tests glob "**/test_*.py")
-            echo "$TEST_FILES" | circleci tests run --command="xargs pytest -o junit_family=legacy --junitxml=test-results/junit.xml" 
-      - run:
-          name: "Run migration"
-          command: |
-            python3 manage.py migrate
+            echo "$TEST_FILES" | circleci tests run --command="xargs pytest -o junit_family=legacy --junitxml=test-results/junit.xml" --verbose --split-by=name       
             pytest $TEST_FILES
 
       - store_test_results:
@@ -56,11 +59,11 @@ jobs:
       - run:
           name: "Run Test"
           command: |
-            mkdir test-results
-            TEST_FILES=$(circleci tests glob "**/test_*.py")
-            echo "$TEST_FILES" | circleci tests run --command="xargs pytest -o junit_family=legacy --junitxml=test-results/junit.xml" --verbose --split-by=filename
             pip  install -r requirements/local.txt
             python3 -m pip install pytest
+            mkdir test-results
+            TEST_FILES=$(circleci tests glob "**/test_*.py")
+            echo "$TEST_FILES" | circleci tests run --command="xargs pytest -o junit_family=legacy --junitxml=test-results/junit.xml" --verbose --split-by=name
             pytest --cov $TEST_FILES
      
       - store_test_results:
