--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,10 +49,12 @@ jobs:
     machine: true
     resource_class: viplaw-singh/test
     environment:
-          TEST_DATABASE_URL_1: postgresql://postgres@localhost/socialnetworkdb 
-          POSTGRES_DB: socialnetworkdb
-          POSTGRES_USER: demo
-          POSTGRES_HOST: 10.0.12.36
+          TEST_DATABASE_URL_1: postgresql://postgres@localhost/circle_test 
+          POSTGRES_DB: circle_test
+          POSTGRES_USER: postgres
+          POSTGRES_HOST: localhost
+          POSTGRES_PORT: 5432
+          
     steps:
       - checkout
       
