--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
           TEST_DATABASE_URL_1: postgresql://postgres@10.0.12.36/circle_test 
           POSTGRES_DB: circle_test
           POSTGRES_USER: postgres
-          POSTGRES_HOST: 10.0.12.36
+          POSTGRES_HOST: postgres
           POSTGRES_PORT: 5432
 
     steps:
@@ -54,7 +54,7 @@ jobs:
           TEST_DATABASE_URL_1: postgresql://postgres@10.0.12.36/circle_test 
           POSTGRES_DB: circle_test
           POSTGRES_USER: postgres
-          POSTGRES_HOST: 10.0.12.36
+          POSTGRES_HOST: postgres
           POSTGRES_PORT: 5432
           
     steps:
