--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       - run:
           name: Start Docker Compose
           command: |
-             sudo docker-compose up -d 
+             #sudo docker-compose up -d 
              
       - run:
           name: "Run migration"
