--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       - run:
           name: Start Docker Compose
           command: |
-             sudo docker-compose up -d 
+             docker-compose up -d 
              
       - run:
           name: "Run migration"
@@ -96,7 +96,7 @@ jobs:
       - run:
           name: Stop Docker Compose
           command: |
-             sudo docker-compose down
+             docker-compose down
             
 
 workflows:
