--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-APP_SECRET=your_very_very_secure_secret_key
-DB_NAME=circle_test
-DB_USER=postgres
-DB_PASSWORD=password
-DB_HOST=postgres
-DB_PORT=5432
+#APP_SECRET=your_very_very_secure_secret_key
+#DB_NAME=circle_test
+#DB_USER=postgres
+#DB_PASSWORD=password
+#DB_HOST=postgres
+#DB_PORT=5432
